--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,18 @@
     },
     "autoload": {
         "psr-4": {
-            "Innmind\\Colour\\": "src/",
+            "Innmind\\Colour\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "Tests\\Innmind\\Colour\\": "tests/"
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit --colors=always"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0"
     }
 }
