--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "test": "vendor/bin/phpunit --colors=always"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.0"
+        "phpunit/phpunit": "~8.0",
+        "vimeo/psalm": "^3.7"
     }
 }
