--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Innmind\\Colour\\": "src/"
+            "Innmind\\Colour\\": "src/",
+            "Fixtures\\Innmind\\Colour\\": "fixtures/"
         }
     },
     "autoload-dev": {
@@ -28,11 +29,15 @@
             "Tests\\Innmind\\Colour\\": "tests/"
         }
     },
-    "scripts": {
-        "test": "vendor/bin/phpunit --colors=always"
-    },
     "require-dev": {
         "phpunit/phpunit": "~8.0",
-        "vimeo/psalm": "^3.7"
+        "vimeo/psalm": "^3.7",
+        "innmind/black-box": "^3.0"
+    },
+    "conflict": {
+        "innmind/black-box": "<3.0|~4.0"
+    },
+    "suggest": {
+        "innmind/black-box": "For property based testing"
     }
 }
