--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0",
-        "vimeo/psalm": "^3.7",
+        "vimeo/psalm": "~3.7.0",
         "innmind/black-box": "^4.0"
     },
     "conflict": {
