--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "require-dev": {
         "phpunit/phpunit": "~9.0",
         "vimeo/psalm": "~4.4",
-        "innmind/black-box": "^4.0"
+        "innmind/black-box": "^4.0",
+        "innmind/coding-standard": "^1.1"
     },
     "conflict": {
         "innmind/black-box": "<4.0|~5.0"
