--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "issues": "http://github.com/Innmind/Colour/issues"
     },
     "require": {
-        "php": "~7.4|~8.0",
+        "php": "~8.0",
         "innmind/immutable": "~3.0"
     },
     "autoload": {
