--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "~8.0",
-        "innmind/immutable": "~3.0"
+        "innmind/immutable": "dev-next"
     },
     "autoload": {
         "psr-4": {
