--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "phpunit/phpunit": "~9.0",
         "vimeo/psalm": "~4.4",
         "innmind/black-box": "^4.0",
-        "innmind/coding-standard": "^1.1"
+        "innmind/coding-standard": "~2.0"
     },
     "conflict": {
         "innmind/black-box": "<4.0|~5.0"
