--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.5",
+        "phpunit/phpunit": "^9.5.14",
         "vimeo/psalm": "~4.4",
         "innmind/black-box": "^4.0",
         "innmind/coding-standard": "~2.0"
