--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "issues": "http://github.com/Innmind/Colour/issues"
     },
     "require": {
-        "php": "~8.1",
+        "php": "~8.2",
         "innmind/immutable": "~4.0"
     },
     "autoload": {
@@ -30,18 +30,18 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.14",
-        "vimeo/psalm": "~4.4",
-        "innmind/black-box": "^4.0",
+        "phpunit/phpunit": "~10.0",
+        "vimeo/psalm": "~5.0",
+        "innmind/black-box": "~5.0",
         "innmind/coding-standard": "~2.0"
     },
     "conflict": {
-        "innmind/black-box": "<4.0|~5.0"
+        "innmind/black-box": "<5.0|~6.0"
     },
     "suggest": {
         "innmind/black-box": "For property based testing"
     },
     "provide": {
-        "innmind/black-box-sets": "4.0"
+        "innmind/black-box-sets": "5.0"
     }
 }
